fix alignment for message options on mobile

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -279,6 +279,8 @@
   background-color: black;
   border-radius: 5px;
   padding: 10px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 #message-options > p {
